build: Disable compiler cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
 kotlin.mpp.applyDefaultHierarchyTemplate=false
 kotlin.native.ignoreDisabledTargets=true
+kotlin.native.cacheKind.linuxX64=none
