--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,9 @@ jobs:
             ~/.konan/**/*
           key: kotlin-konan
 
+      - name: Setup Dependencies
+        run: sudo apt-get install -y libcurl4-openssl-dev
+
       - name: Build project
         run: ./gradlew linuxX64MainBinaries --parallel --no-daemon
   build-windows:
