--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,9 @@ jobs:
           key: kotlin-konan
 
       - name: Setup Dependencies
-        run: sudo apt-get install -y libcurl4-openssl-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcurl4-openssl-dev
 
       - name: Build project
         run: ./gradlew linuxX64MainBinaries --parallel --no-daemon
