--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,7 @@ jobs:
 
       - name: Setup Dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libcurl4-gnutls-dev
+          bash ./build_curl.sh
 
       - name: Build project
         run: ./gradlew linuxX64MainBinaries --parallel --no-daemon
